tat-tvam/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  namespace: tat-tvam
spec:
  selector:
    matchLabels:
      resource: deployment
  template:
    metadata:
      labels:
        resource: deployment
    spec:
      containers:
      - image: shrivara/tat-tvam:latest
        name: tat-tvam
        imagePullPolicy: Always
