tat-tvam/03-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: tat-tvam
  annotations:
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-production"
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - secretName: tat-tvam-tls
    hosts:
    - tat-tvam.com
  rules:
  - host: tat-tvam.com
    http:
      paths:
      - backend:
          serviceName: service
          servicePort: 80
